Fix: Add adjust in transtions, resposive and navigation mobile

--- a/styles.css
+++ b/styles.css
@@ -5,15 +5,20 @@
   --background-header: #27272a;
   --text-white: #ffffff;
 
-  --color-purple: #7c3aed; 
+  --color-purple: #7c3aed;
 }
 
 * {
   margin: 0;
   padding: 0;
 
+  scroll-padding-top: 92px;
+
   box-sizing: border-box;
   list-style: none;
+
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 body {
@@ -53,7 +58,6 @@ header button {
 }
 
 header button:hover {
-  /* border: 2px solid  white; */
   color: white;
   background-color: #4e4e50;
 }
@@ -79,6 +83,8 @@ header nav a {
 
   border: 2px solid white;
   border-radius: 14px;
+
+  transition: all 1s;
 }
 
 header nav a:hover {
@@ -100,7 +106,8 @@ main {
 .person {
   border: 2px solid white;
   border-radius: 1rem;
-  height: 462px;
+  max-height: 100%;
+  min-height: 50%;
 }
 
 main section {
@@ -111,31 +118,31 @@ main section {
   gap: 2rem;
 
   max-width: 662px;
+}
 
-  div {
-    display: flex;
-    flex-direction: column;
+main section div {
+  display: flex;
+  flex-direction: column;
 
-    gap: 1rem;
-  }
+  gap: 1rem;
+}
 
-  div h1 {
-    font-size: 2rem;
-    letter-spacing: 0.3rem;
-    font-weight: 100;
-  }
+main section div h1 {
+  font-size: 2rem;
+  letter-spacing: 0.3rem;
+  font-weight: 100;
+}
 
-  div p {
-    font-size: 1rem;
-    letter-spacing: 0.1rem;
-    font-weight: 500;
-  }
+main section div p {
+  font-size: 1rem;
+  letter-spacing: 0.1rem;
+  font-weight: 500;
 }
 
 .tech-list {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  
+
   gap: 1rem;
 }
 
@@ -157,4 +164,21 @@ main section {
 .tech-list img {
   width: 24px;
   height: 24px;
+}
+
+@media (max-width: 768px) {
+  main {
+    flex-direction: column;
+    flex: 1;
+    justify-content: left;
+    gap: 2rem;
+  }
+  
+  .tech-list {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  
+  header nav {
+    display: none;
+  }
 }
